First API call with services

--- a/testapp/angular.json
+++ b/testapp/angular.json
@@ -72,7 +72,8 @@
               "buildTarget": "testapp:build:production"
             },
             "development": {
-              "buildTarget": "testapp:build:development"
+              "buildTarget": "testapp:build:development",
+              "proxyConfig": "src/proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
