--- a/testapp/package.json
+++ b/testapp/package.json
@@ -18,12 +18,14 @@
     "@angular/core": "^19.0.0",
     "@angular/forms": "^19.0.0",
     "@angular/material": "^19.0.2",
+    "@angular/material-moment-adapter": "^19.0.3",
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.4",
     "express": "^4.18.2",
+    "moment": "^2.30.1",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
